--- a/index.htm
+++ b/index.htm
@@ -5374,7 +5374,7 @@
       word-wrap: break-word
     }
 
-    .frame-yJaOb .frame-1e8ustg {
+    .frame-yJaOb {
       align-content: center;
       align-items: center;
       display: flex;
@@ -6987,7 +6987,7 @@
 
     .frame-yJaOb .frame-1soesdx {
       flex: none;
-      height: 39px;
+      height: 33px;
       position: relative;
       white-space: pre-wrap;
       width: 196px;
