--- a/index.htm
+++ b/index.htm
@@ -10043,7 +10043,7 @@
 </head>
 
 <body class="frame-body-xx5Bh2xnr-frame-yJaOb">
-  <script async="" src="https://events.framer.com/script"
+  <script async="" src=""
     data-fid="842f2b8774d12725159f268f02191b8b980d6e6bf6e4459f395e2799d3639a01"></script>
   <!-- Start of bodyStart -->
   <!-- End of bodyStart -->
